--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
+    "@splinetool/react-spline": "^4.1.0",
     "autoprefixer": "^10.4.21",
     "better-auth": "^1.3.7",
     "class-variance-authority": "^0.7.1",
@@ -28,12 +29,15 @@
     "lucide-react": "^0.542.0",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.0",
+    "motion": "^12.23.22",
     "next": "15.5.2",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
+    "react-icons": "^5.5.0",
+    "react-markdown": "^10.1.0",
     "react-select-country-list": "^2.2.3",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
