--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-dom": "19.1.0",
     "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
+    "chart.js": "^4.4.6",
+    "react-chartjs-2": "^5.3.0",
     "react-markdown": "^10.1.0",
     "react-select-country-list": "^2.2.3",
     "sonner": "^2.0.7",
